--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of victor is to interact with the [Mapbox Vector Tile API](https://docs.mapbox.com/help/glossary/vector-tiles-api/) in R.
+The goal of victor is to interact with the [Mapbox Vector Tile API](https://docs.mapbox.com/help/glossary/vector-tiles-api/) ( [also here](https://docs.mapbox.com/api/maps/#vector-tiles) ) in R.
 Grab a vector tile,  work with it using the simple features package sf.
 Plot static maps with ggplot2, tmap, etc.
 
