--- a/README.Rmd
+++ b/README.Rmd
@@ -14,6 +14,8 @@ knitr::opts_chunk$set(
 ```
 # victor
 
+
+
 <!-- badges: start -->
 <!-- badges: end -->
 
@@ -45,10 +47,34 @@ devtools::install_github("adam-gruer/victor")
 ```
 ## Example
 
-This is a basic example which shows you how to solve a common problem:
+Let's create a map of Melburn and surrounding cities:
 
-```{r example}
+```{r example, message=FALSE, warning=FALSE}
 library(victor)
-## basic example code
+library(sf)
+library(tidyverse)
+
+
+melburn <- spoils(zoom = 7, longitude = 144.8430, latitude = -37.7311)
+
+roads <- filter(melburn$road,!st_is(geometry, "POINT")) 
+road_shields <-  filter(melburn$road,
+                        st_is(geometry, "POINT"),
+                        str_starts(ref, "M") ) %>% 
+                  group_by(ref) %>% 
+                  filter(row_number() == 1)
+places <- filter(melburn$place_label, symbolrank < 11)
+
+ggplot() +
+  geom_sf(data = melburn$water, fill = "lightblue") +
+  geom_sf_label(aes(label = ref), data = road_shields) +
+  geom_sf(aes(colour = class), data = roads) +
+  geom_sf_label(aes(label = name, size = symbolrank),
+                data = places) +
+  scale_size(trans = "reverse", range = c(4,6)) +
+  theme_void() +
+  theme( panel.grid.major = element_line(size = 0),
+         plot.background = element_rect(fill = "antiquewhite"),
+         legend.position = "none") 
 ```
 
