--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 
 <!-- badges: start -->
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://www.tidyverse.org/lifecycle/#experimental)
 <!-- badges: end -->
 
 The goal of victor is to interact with the [Mapbox Vector Tile API](https://docs.mapbox.com/help/glossary/vector-tiles-api/) ( [also here](https://docs.mapbox.com/api/maps/#vector-tiles) ) in R.
