--- a/vignettes/getting_started.Rmd
+++ b/vignettes/getting_started.Rmd
@@ -20,7 +20,9 @@ library(tidyverse)
 library(sf)
 ```
 
-
+Use the spoils function to retrieve a tile for a given location and zoom
+It returns a list of simple features data frames.  One for each layer of data provided by mapbox.  
+<!-- To view a summary of available layers , call summary(). -->
 ```{r, message=FALSE, warning=FALSE}
 
 melburn <- spoils(zoom = 7, longitude = 144.8430, latitude = -37.7311)
@@ -31,12 +33,15 @@ road_shields <-  filter(melburn$road,
                         str_starts(ref, "M") ) %>% 
                   group_by(ref) %>% 
                   filter(row_number() == 1)
-places <- filter(melburn$place_label, symbolrank < 11)
+places <- filter(melburn$place_label, symbolrank < 11) %>% 
+  mutate(name = case_when(name == "Melbourne" ~ "Melburn",
+                          TRUE ~ as.character(name)))
 
 ggplot() +
   geom_sf(data = melburn$water, fill = "lightblue") +
-  geom_sf_label(aes(label = ref), data = road_shields) +
   geom_sf(aes(colour = class), data = roads) +
+  geom_sf_label(aes(label = ref), data = road_shields) +
+  
   geom_sf_label(aes(label = name, size = symbolrank),
                 data = places) +
   scale_size(trans = "reverse", range = c(4,6)) +
